--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,15 @@
 	<!-- endbower -->
 </head>
 <body>
+{{valuesChanged}}
+<div class="container" ng-controller="controllero as c1">
+{{c1}}
+      <button ng-click="c1.show()">To Show the data</button>
 
-<div class="container">
     <div class="row">
       <div  class="the-fieldset col-xs-12 col-sm-10 col-sm-push-1 col-md-8 col-md-push-2 col-lg-6 col-lg-push-3">
-        <form id="form" tink-fieldset>
-          <div class="fieldset-editable "  data-data="form1" data-ng-init="form1={rijksregisternr:undefined}">
+        <form id="form" class="fieldset-editable" tink-fieldset values-changed="c1.haschanged">
+          <div   data-data="form1" data-ng-init="form1={rijksregisternr:undefined}">
             <fieldset>
               <legend>Algemeen</legend>
               
@@ -27,7 +30,7 @@
                   <label for="field1">Type</label>
                 </div>
                 <div class="col-xs-8">
-                  <input ng-model="mut" type="text" name="field1" id="field1" value="Mutualiteit" required>
+                  <input ng-model="c1.field1" type="text" name="field1" id="field1"  required>
                 </div>
               </div>
 
@@ -37,8 +40,8 @@
                 </div>
                 <div class="col-xs-8">
                   <div class="select">
-                    <select name="field2" id="field2">
-                      <option value="Christelijke Mutualiteit">Christelijke Mutualiteit</option>
+                    <select ng-model="c1.field2" name="field2" id="field2">
+                      <option selected="" checked value="Christelijke Mutualiteit">Christelijke Mutualiteit</option>
                       <option value="Socialistische Mutualiteit">Socialistische Mutualiteit</option>
                       <option value="Liberale Mutualiteit">Liberale Mutualiteit</option>
                       <option value="Onafhankelijk Ziekenfonds">Onafhankelijk Ziekenfonds</option>
@@ -54,7 +57,7 @@
                   <label for="field14">Paspoortnr.</label>
                 </div>
                 <div class="col-xs-8">
-                <tink-identity-number  data-ng-model="form1.rijksregisternr"></tink-identity-number>
+                <tink-identity-number  data-ng-model="c1.field3"></tink-identity-number>
                   <!-- <input type="text" name="field14" id="field14" value="03/303.33.03" required> -->
                 </div>
               </div>
@@ -64,12 +67,12 @@
                   <label for="field3">Adres</label>
                 </div>
                 <div class="col-xs-8">
-                  <input type="text"  ng-model="straat" name="field3" id="field3" value="Molenbergstraat 2" required>
+                  <input type="text"  ng-model="c1.field4" name="field3" id="field3"  required>
                 </div>
               </div>
               <div class="row form-group">
                 <div class="col-xs-8 col-xs-push-4">
-                  <input type="text" ng-model="iets" name="field4" id="field4" value="2000 Antwerpen" required>
+                  <input type="text" ng-model="c1.field5" name="field4" id="field4"  required>
                 </div>
               </div>
 
@@ -78,7 +81,7 @@
                   <label for="field5">Telefoonnr.</label>
                 </div>
                 <div class="col-xs-8">
-                  <input type="text" name="field5" id="field5" value="03/303.33.03" disabled>
+                  <input type="text" name="field5" ng-model="c1.field6" id="field5">
                 </div>
               </div>
 
