--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,12 @@
       <button ng-click="c1.show()">To Show the data</button>
 
     <div class="row">
-      <div  class="the-fieldset col-xs-12 col-sm-10 col-sm-push-1 col-md-8 col-md-push-2 col-lg-6 col-lg-push-3">
+      <div  class="col-xs-12 col-sm-10 col-sm-push-1 col-md-8 col-md-push-2 col-lg-6 col-lg-push-3">
         <form id="form" class="fieldset-editable" tink-fieldset values-changed="c1.haschanged">
           <div   data-data="form1" data-ng-init="form1={rijksregisternr:undefined}">
             <fieldset>
               <legend>Algemeen</legend>
-              
+
 
               <div class="row form-group">
                 <div class="col-xs-4">
