--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
 
     <div class="row">
       <div  class="col-xs-12 col-sm-10 col-sm-push-1 col-md-8 col-md-push-2 col-lg-6 col-lg-push-3">
-        <form id="form" class="fieldset-editable" tink-fieldset values-changed="c1.haschanged">
-          <div   data-data="form1" data-ng-init="form1={rijksregisternr:undefined}">
+        <form id="form" class="fieldset-editable mouseOff" tink-fieldset values-changed="c1.haschanged">
+          <!-- <div data-data="form1" data-ng-init="form1={rijksregisternr:undefined}"> -->
             <fieldset>
               <legend>Algemeen</legend>
 
@@ -81,7 +81,7 @@
                   <label for="field5">Telefoonnr.</label>
                 </div>
                 <div class="col-xs-8">
-                  <input type="text" name="field5" ng-model="c1.field6" id="field5">
+                  <input type="number" name="field5" ng-model="c1.field6" id="field5">
                 </div>
               </div>
 
@@ -267,7 +267,7 @@
                 </div>
               </div>
             </div> -->
-          </div>
+          <!-- </div> -->
         </form>
       </div>
     </div>
