--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,11 @@
 <h1>is editable {{c1.switchValue}}</h1>
     <div class="row">
       <div  class="col-xs-12 col-sm-10 col-sm-push-1 col-md-8 col-md-push-2 col-lg-6 col-lg-push-3">
+        <h1>Loco fieldset</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div  class="col-xs-12 col-sm-10 col-sm-push-1 col-md-8 col-md-push-2 col-lg-6 col-lg-push-3">
         <form id="form" class="form-horizontal fieldset-editable uneditable" tink-fieldset tink-form-editable="c1.switchValue"  values-changed="c1.haschanged">
            <div data-data="form1" data-ng-init="form1={rijksregisternr:undefined}">
             <fieldset>
@@ -36,10 +41,10 @@
               </div>
 
               <div class="row form-group">
-                <div class="col-xs-4">
+                <div class="col-xs-12">
                   <label for="field2">Instelling</label>
                 </div>
-                <div class="col-xs-8">
+                <div class="col-xs-12">
                   <div class="select">
                     <select ng-model="c1.field2" name="field2" id="field2">
                       <option selected="" checked value="Christelijke Mutualiteit">Christelijke Mutualiteit</option>
@@ -183,7 +188,11 @@
                   </div>
                 </div>
               </div>
-
+            </fieldset>
+          </div>
+          <div class="fieldset-editable-buttons">
+            <button type="submit">Bewaren</button> <button type="button">Annuleren</button>
+          </div>
         </form>
       </div>
     </div>
